# wc2026

./: .env.example  .gitignore  .gitkeep  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: wc2026_update.yml
data/: fixtures.csv
models/: training_meta.json
outputs/: wc2026_predictions.csv
src/wc2026/: __init__.py  cli.py  config.py  data_loading.py  elo.py  features.py  github_loader.py  kaggle_loader.py  model_train.py  predict_world_cup.py  score_matrix.py  summary.py  team_names.py  visualization.py  wc2026_scheduler.py  wc2026_xg_source.py  xg_features.py
