[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026"
version = "0.1.0"
description = "World Cup 2026 match prediction: Elo, form, H2H, xG + XGBoost"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "kagglehub>=0.2",
]

[project.scripts]
wc2026-download = "wc2026.cli:download_data"
wc2026-train = "wc2026.cli:train_models"
wc2026-predict = "wc2026.cli:predict_fixtures"
wc2026-summary = "wc2026.cli:summary"

[tool.setuptools.packages.find]
where = ["src"]
